# advent-of-code-2022

./: .gitignore  README.md  create_new_day  pyproject.toml
advent_of_code_2022/: utils.py
advent_of_code_2022/day_1/: data.py  day_1.py
advent_of_code_2022/day_10/: data.py  day_10.py
advent_of_code_2022/day_2/: data.py  day_2.py
advent_of_code_2022/day_3/: data.py  day_3.py
advent_of_code_2022/day_4/: data.py  day_4.py
advent_of_code_2022/day_5/: data.py  day_5.py
advent_of_code_2022/day_6/: data.py  day_6.py
advent_of_code_2022/day_7/: data.py  day_7.py
advent_of_code_2022/day_8/: data.py  day_8.py
advent_of_code_2022/day_9/: data.py  day_9.py
