[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Andrew Meyer <andrewmeyer@granular.ag>"]

[tool.poetry.dependencies]
python = "^3.10"
art = "^5.8"
yaspin = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
